Improve CSS / Add color support for html form's button / fixed full width template layout issue

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -407,16 +407,10 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
-	border-radius: 3px;
-	background: #e6e6e6;
-	color: rgba(0, 0, 0, .8);
-	font-size: 12px;
-	font-size: 0.75rem;
-	line-height: 1;
-	padding: .6em 1em .4em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+    border: 1px solid #1e73be;
+    background: #1e73be;
+    color: rgb(255, 255, 255);
+    padding: 9px 28px;
 }
 
 button:hover,
@@ -453,10 +447,11 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
-	color: #666;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	padding: 3px;
+    color: #666;
+    border: 1px solid #ccc;
+    padding: 7px 10px;
+    max-width: 100%;
+    width: 100%;
 }
 
 select {
@@ -484,6 +479,10 @@ textarea:focus {
 
 textarea {
 	width: 100%;
+	height:100px;
+}
+div.wpcf7-validation-errors{
+	overflow:hidden;	
 }
 
 
